<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF0E0"
    tools:context=".Location">

    <WebView
        android:id="@+id/webview"
        android:layout_width="414dp"
        android:layout_height="563dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/blackSquare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greySquare1" />

    <ImageView
        android:id="@+id/blackSquare1"
        style="@style/Style_image_1"
        android:layout_width="450dp"
        android:layout_height="@dimen/size_100"
        android:background="@color/color2"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/greySquare1"
        style="@style/Style_image_1"
        android:layout_width="423dp"
        android:layout_height="83dp"
        android:background="@color/color3"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintVertical_bias="0.131" />

    <ImageView
        android:id="@+id/whiteSquare1"
        style="@style/Style_image_1"
        android:layout_width="201dp"
        android:layout_height="53dp"
        android:background="@color/white"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
    android:id="@+id/textView_lk"
    style="@style/Style_text_1"
    android:layout_width="69dp"
    android:layout_height="35dp"
    android:text="@string/title_karta"
    android:textSize="@dimen/size_16"
    app:layout_constraintHorizontal_bias="0.53"
    app:layout_constraintVertical_bias="0.045" />


    <TextView
        android:id="@+id/textView_dos"
        style="@style/Style_text_1"
        android:layout_width="104dp"
        android:layout_height="32dp"
        android:text="@string/title_dos"
        android:textSize="@dimen/size_16"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/textView_sam"
        style="@style/Style_text_1"
        android:layout_width="139dp"
        android:layout_height="30dp"
        android:text="@string/title_sam"
        android:textSize="@dimen/size_16"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintVertical_bias="0.166" />

    <ImageView
        android:id="@+id/blackSquare"
        android:layout_width="450dp"
        android:layout_height="@dimen/size_100"
        android:background="@color/color1"
        app:layout_constraintHorizontal_bias="0.540"
        app:layout_constraintVertical_bias="1.0"
        style="@style/Style_image_1" />

    <ImageView
        android:id="@+id/imageView3"
        style="@style/Style_image_2"
        app:layout_constraintHorizontal_bias="0.380"
        app:srcCompat="@drawable/sticker4" />

    <ImageView
        android:id="@+id/imageView6"
        style="@style/Style_image_2"
        app:layout_constraintHorizontal_bias="0.130"
        app:srcCompat="@drawable/sticker7" />

    <ImageView
        android:id="@+id/imageView5"
        style="@style/Style_image_2"
        app:layout_constraintHorizontal_bias="0.630"
        app:srcCompat="@drawable/sticker6" />

    <ImageView
        android:id="@+id/imageView4"
        style="@style/Style_image_2"
        app:layout_constraintHorizontal_bias="0.880"
        app:srcCompat="@drawable/sticker5" />

    <Button
        android:id="@+id/user_button"
        style="@style/Style_button_1"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintVertical_bias="0.971" />

    <Button
        android:id="@+id/basket_button"
        style="@style/Style_button_1"
        app:layout_constraintHorizontal_bias="0.630" />

    <Button
        android:id="@+id/menu_button"
        style="@style/Style_button_1"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintVertical_bias="0.97" />

    <Button
        android:id="@+id/location_button"
        style="@style/Style_button_1"
        app:layout_constraintHorizontal_bias="0.140" />


</androidx.constraintlayout.widget.ConstraintLayout>