<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView1"
        style="@style/Style_image_1"
        android:layout_width="412dp"
        android:layout_height="219dp"
        android:scaleType="centerCrop"
        android:src="@drawable/_ec19138bf7084ea4da960de1a5f8950"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.121" />

    <ImageView
        android:id="@+id/blackSquare2"
        style="@style/Style_image_1"
        android:layout_width="422dp"
        android:layout_height="161dp"
        android:background="@color/color1"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintVertical_bias="0.485" />

    <ImageView
        android:id="@+id/blackSquare"
        style="@style/Style_image_1"
        android:layout_width="450dp"
        android:layout_height="@dimen/size_100"
        android:background="@color/color1"
        app:layout_constraintHorizontal_bias="0.540"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/whiteSquare4"
        style="@style/Style_image_1"
        android:layout_width="182dp"
        android:layout_height="74dp"
        android:background="@color/white"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintVertical_bias="0.479" />

    <Button
        android:id="@+id/menu_button2"
        style="@style/Style_button_1"
        android:layout_width="416dp"
        android:layout_height="116dp"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.723" />

    <Button
        android:id="@+id/menu_button6"
        style="@style/Style_button_1"
        android:layout_width="408dp"
        android:layout_height="69dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.843" />

    <ImageView
        android:id="@+id/whiteSquare1"
        style="@style/Style_image_1"
        android:layout_width="414dp"
        android:layout_height="113dp"
        android:background="@color/color2"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintVertical_bias="0.708" />

    <ImageView
        android:id="@+id/whiteSquare7"
        style="@style/Style_image_1"
        android:layout_width="409dp"
        android:layout_height="75dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.841" />

    <ImageView
        android:id="@+id/whiteSquare3"
        style="@style/Style_image_1"
        android:layout_width="@dimen/size_80"
        android:layout_height="150dp"
        android:background="@color/white"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Style_text_1"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:text="@string/title_num"
        android:textSize="@dimen/size_16"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/textView_menu"
        style="@style/Style_text_1"
        android:layout_width="101dp"
        android:layout_height="32dp"
        android:text="@string/title_menu"
        android:textSize="@dimen/size_20"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintVertical_bias="0.69" />

    <TextView
        android:id="@+id/textView_1"
        style="@style/Style_text_1"
        android:layout_width="113dp"
        android:layout_height="26dp"
        android:text="Рецепты"
        android:textSize="20dp"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintVertical_bias="0.828" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Style_text_1"
        android:layout_width="174dp"
        android:layout_height="38dp"
        android:text="@string/title_podarok"
        android:textSize="@dimen/size_20"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintVertical_bias="0.47" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Style_text_1"
        android:text="@string/title_podarok2"
        android:textSize="@dimen/size_16"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Style_text_1"
        android:text="@string/title_bonus"
        android:textSize="@dimen/size_16"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintVertical_bias="0.258" />

    <ImageView
        android:id="@+id/imageView3"
        style="@style/Style_image_2"
        app:layout_constraintHorizontal_bias="0.380"
        app:srcCompat="@drawable/sticker4" />

    <ImageView
        android:id="@+id/imageView6"
        style="@style/Style_image_2"
        app:layout_constraintHorizontal_bias="0.130"
        app:srcCompat="@drawable/sticker7" />

    <ImageView
        android:id="@+id/imageView5"
        style="@style/Style_image_2"
        app:layout_constraintHorizontal_bias="0.630"
        app:srcCompat="@drawable/sticker6" />

    <ImageView
        android:id="@+id/imageView4"
        style="@style/Style_image_2"
        app:layout_constraintHorizontal_bias="0.880"
        app:srcCompat="@drawable/sticker5" />

    <ImageView
        android:id="@+id/imageView2"
        style="@style/Style_image_1"
        android:layout_width="83dp"
        android:layout_height="111dp"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintVertical_bias="0.508"
        app:srcCompat="@drawable/sticker8" />

    <Button
        android:id="@+id/user_button"
        style="@style/Style_button_1"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintVertical_bias="0.971" />

    <Button
        android:id="@+id/basket_button"
        style="@style/Style_button_1"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintVertical_bias="0.958" />

    <Button
        android:id="@+id/menu_button"
        style="@style/Style_button_1"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintVertical_bias="0.97" />

    <Button
        android:id="@+id/location_button"
        style="@style/Style_button_1"
        app:layout_constraintHorizontal_bias="0.140" />

    <ImageView
        android:id="@+id/whiteSquare0"
        style="@style/Style_image_1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="60dp"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="7dp" />

</androidx.constraintlayout.widget.ConstraintLayout>